--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  uschedulerwebapp:
+  yunikornwebapp:
     build: .
     image: yunikorn/yunikorn-web
     ports:
-      - 9889:80
+      - 9889:9889
