--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -4,4 +4,4 @@ COPY ./nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 WORKDIR /usr/share/nginx/html
 
-COPY ./dist/uscheduler-ui .
+COPY ./dist/yunikorn-web .
