--- a/package.json
+++ b/package.json
@@ -1,58 +1,72 @@
 {
-    "name": "uscheduler-ui",
-    "version": "0.0.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "build:prod": "ng build --prod",
-        "start:srv": "json-server -w jsdb.json"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^6.1.0",
-        "@angular/cdk": "^6.1.0",
-        "@angular/common": "^6.1.0",
-        "@angular/compiler": "^6.1.0",
-        "@angular/core": "^6.1.0",
-        "@angular/forms": "^6.1.0",
-        "@angular/http": "^6.1.0",
-        "@angular/material": "^6.1.0",
-        "@angular/platform-browser": "^6.1.0",
-        "@angular/platform-browser-dynamic": "^6.1.0",
-        "@angular/router": "^6.1.0",
-        "chart.js": "^2.7.3",
-        "core-js": "^2.5.4",
-        "moment": "^2.24.0",
-        "ngx-spinner": "^6.1.0",
-        "rxjs": "^6.0.0",
-        "zone.js": "~0.8.26"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.7.0",
-        "@angular/cli": "~6.1.3",
-        "@angular/compiler-cli": "^6.1.0",
-        "@angular/language-service": "^6.1.0",
-        "@types/jasmine": "~2.8.6",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "~8.9.4",
-        "codelyzer": "~4.2.1",
-        "jasmine-core": "~2.99.1",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~1.7.1",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~2.0.0",
-        "karma-jasmine": "~1.1.1",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "protractor": "~5.3.0",
-        "ts-node": "~5.0.1",
-        "tslint": "~5.9.1",
-        "typescript": "~2.8.0"
-    },
-    "resolutions": {
-	"**/**/engine.io-client": "^3.1.4"
+  "name": "yunikorn-web",
+  "version": "0.1.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "build:prod": "ng build --prod",
+    "start:srv": "json-server -w jsdb.json"
+  },
+  "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "src/**/*.{js,ts,json,css,scss,md,html}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
+  "dependencies": {
+    "@angular/animations": "~8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "chart.js": "^2.9.3",
+    "core-js": "^3.6.0",
+    "moment": "^2.24.0",
+    "ngx-spinner": "^8.1.0",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.19",
+    "@angular/cli": "~8.3.19",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "json-server": "^0.15.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3"
+  },
+  "resolutions": {
+    "**/**/serialize-javascript": "^2.1.1"
+  }
 }
