--- a/src/assets/config/envconfig.json
+++ b/src/assets/config/envconfig.json
@@ -1,6 +1,6 @@
 {
   "protocol": "http:",
   "corsproxyWebAddress": "",
-  "ushedulerWebAddress": ":9080",
+  "shedulerWebAddress": ":9080",
   "prometheusWebAddress": "127.0.0.1:9090"
 }
