--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "e2e": "ng e2e",
     "build:prod": "ng build --prod",
     "start:srv": "json-server -w jsdb.json",
-    "test:ci": "ng test --code-coverage --karma-config=./karma.conf.ci.js"
+    "test:coverage": "ng test --code-coverage --karma-config=./karma.conf.ci.js"
   },
   "private": true,
   "husky": {
