--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,6 @@ version: '3'
 services:
   yunikornwebapp:
     build: .
-    image: apache/yunikorn
+    image: yunikorn/yunikorn:web-latest
     ports:
       - 9889:9889
