Revert "Removed yarn install, since it is already installed"
This reverts commit b07de8cb84359e60e35afa129b248c5dad9e16a3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_script:
   - npm install -g @angular/cli
   - npm install karma
   - npm install -g protractor
+  - npm install yarn
 
 jobs:
   include:
