[YUNIKORN-146] Fixed typo in travis and renamed push command to push image

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,5 +39,5 @@ jobs:
         - make build-prod
         - yarn test:coverage
         - yarn lint
-      after_success: push image
+      after_success: make push_image
       on branch: master
