moved script into a new line

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,4 +40,5 @@ jobs:
         - yarn lint
     - stage: publish docker image
       install: skip
-      script: make push_image
+      script:
+        - make push_image
