[YUNIKORN-146] Add travis integration for yunikorn-web repo (#37)
Add Travis CI integration, this includes the basic build, lint check, license check etc.
And this also runs a cron job to update the latest image daily.

Co-authored-by: Weiwei Yang <wwei@apache.org>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,6 @@ version: '3'
 services:
   yunikornwebapp:
     build: .
-    image: yunikorn/yunikorn-web
+    image: yunikorn/yunikorn:web-latest
     ports:
       - 9889:9889
