--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-#!/bin/sh
-
 #
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
@@ -9,26 +7,43 @@
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+#      http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
 
-echo "[1/5] Removing dist and node_modules..."
-rm -rf dist/ node_modules/
+language: node_js
+node_js:
+  - "12"
 
-echo "[2/5] Installing dependencies..."
-yarn install
+git:
+  depth: 1
 
-echo "[3/5] Building modules..."
-yarn build:prod
+services:
+  - 'docker'
 
-echo "[4/5] Building docker image apache/yunikorn:web-latest..."
-docker build -t apache/yunikorn:web-latest -f ./nginx/Dockerfile .
-
-echo "[5/5] Starting docker container using image apache/yunikorn:web-latest..."
-docker run -d -p 9889:9889 apache/yunikorn:web-latest
+jobs:
+  include:
+    - stage: pre-commit checks
+      install:
+        - rm -rf package-lock.json node_modules
+        - npm install -g @angular/cli
+        - npm install karma
+        - npm install -g protractor
+        - npm install yarn
+      script:
+        - make check-license
+        - make build-prod
+        - yarn test:coverage
+        - yarn lint
+    - stage: publish docker image
+      install: skip
+      deploy:
+        provider: script
+        script: make push
+        on:
+          branch: master
+          condition: $TRAVIS_EVENT_TYPE = cron
