YUNIKORN-214: Fix travis build failure in yunikorn-web

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,10 @@ jobs:
         - yarn lint
     - stage: publish docker image
       install: skip
+      script: skip
       deploy:
         provider: script
-        script: make push
+        script: make push_image
         on:
           branch: master
           condition: $TRAVIS_EVENT_TYPE = cron
