YUNIKORN-406: Fix direct yunikorn scheduler api access from yunikorn web

--- a/src/assets/config/envconfig.json
+++ b/src/assets/config/envconfig.json
@@ -1,6 +1,4 @@
 {
   "protocol": "http:",
-  "corsproxyWebAddress": "",
-  "shedulerWebAddress": ":9080",
-  "prometheusWebAddress": "127.0.0.1:9090"
+  "localSchedulerWebAddress": "localhost:9080"
 }
