--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,4 +5,10 @@ server {
     index index.html index.htm;
     try_files $uri $uri/ /index.html;
   }
+  location /ws {
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_pass http://127.0.0.1:9080;
+  }
 }
