--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "e2e": "ng e2e",
     "build:prod": "ng build --prod",
     "start:srv": "json-server -w jsdb.json",
-    "test:coverage": "ng test --code-coverage --karma-config=./karma.conf.ci.js"
+    "test:coverage": "ng test --code-coverage --karma-config=./karma.conf.ci.js",
+    "prettify": "prettier --config ./.prettierrc --write 'src/**/*.{js,ts,json,css,scss,md,html}'"
   },
   "private": true,
   "husky": {
