--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "yunikorn-web",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build:prod": "ng build --prod",
+    "watch": "ng build --watch --configuration development",
+    "test:singleRun": "ng test --code-coverage --watch false",
+    "start:host": "ng serve --host 0.0.0.0",
+    "build:prod": "ng build --configuration production",
     "start:srv": "json-server --watch json-db.json",
     "test:coverage": "ng test --code-coverage --karma-config=./karma.conf.ci.js",
     "prettify": "prettier --config ./.prettierrc --write 'src/**/*.{js,ts,json,css,scss,md,html}'"
@@ -26,56 +27,47 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "chart.js": "^2.9.3",
-    "core-js": "^3.6.0",
-    "moment": "^2.24.0",
-    "ngx-spinner": "^8.1.0",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.1",
+    "@angular/common": "~13.3.0",
+    "@angular/compiler": "~13.3.0",
+    "@angular/core": "~13.3.0",
+    "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.1",
+    "@angular/platform-browser": "~13.3.0",
+    "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular/router": "~13.3.0",
+    "chart.js": "^3.7.1",
+    "chartjs-adapter-date-fns": "^2.0.0",
+    "date-fns": "^2.28.0",
+    "moment": "^2.29.1",
+    "ngx-spinner": "^13.1.1",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "~8.3.19",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@testing-library/dom": "^6.11.0",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "json-server": "^0.15.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "karma-spec-reporter": "^0.0.32",
+    "@angular-devkit/build-angular": "~13.3.0",
+    "@angular/cli": "~13.3.0",
+    "@angular/compiler-cli": "~13.3.0",
+    "@types/jasmine": "~3.10.0",
+    "@types/node": "^12.11.1",
+    "husky": "^7.0.4",
+    "jasmine-core": "~4.0.0",
+    "json-server": "^0.17.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-spec-reporter": "^0.0.33",
     "karma-super-dots-reporter": "^0.2.0",
-    "lint-staged": "^9.5.0",
+    "lint-staged": "^12.3.7",
     "ng-bullet": "^1.0.3",
-    "ng-mocks": "^8.1.0",
-    "prettier": "^1.19.1",
-    "protractor": "~5.4.0",
-    "puppeteer": "^2.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
-  },
-  "resolutions": {
-    "**/**/serialize-javascript": "^2.1.1",
-    "**/**/tree-kill": "^1.2.2"
+    "ng-mocks": "^13.3.0",
+    "prettier": "^2.6.1",
+    "puppeteer": "^13.5.1",
+    "typescript": "~4.6.2"
   }
 }
