--- a/nginx/default.conf.template
+++ b/nginx/default.conf.template
@@ -1,5 +1,5 @@
 server {
-  listen 9889;
+  listen ${YK_WEB_PORT};
   location / {
     root /usr/share/nginx/html;
     index index.html index.htm;
@@ -9,6 +9,6 @@ server {
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_pass http://127.0.0.1:9080;
+    proxy_pass http://127.0.0.1:${YK_REST_PORT};
   }
 }
