--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@
 
 worker_processes  auto;
 daemon            off;
-error_log         /tmp/nginx-error.log error;
+error_log         stderr error;
 pid               /tmp/nginx.pid;
 
 events {
