--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 2
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version-file: .go_version
       - name: Check License
         run: make license-check
       - name: Set Node.js Environment
@@ -32,3 +36,9 @@ jobs:
         run: yarn build:prod
       - name: Test Coverage
         run: yarn test:coverage
+      - name: Go lint
+        run: make lint
+      - name: Go unit tests
+        run: make test_go
+      - name: Code coverage
+        uses: codecov/codecov-action@v3
