[YUNIKORN-1873] Web: Use standard build conventions
- Allow go compiler to be overridden by GO variable
- Allow Docker image name to be customized via WEB_TAG variable
- Use "build" for build artifacts instead of "bin"
- Install build tools to "tools" dir
- Use proper Makefile dependencies
- Add "distclean" target to clean up fully

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,5 @@ jobs:
         run: make test_go
       - name: Code coverage
         uses: codecov/codecov-action@v3
+        with:
+          files: build/coverage.txt
