Revert karma update to change failure to warning
cleanup imports and deprecated calls

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/core": "^16.2.10",
     "@angular/forms": "^16.2.10",
     "@angular/material": "^16.2.9",
+    "angular-material-expansion-panel": "^0.7.2",
     "@angular/platform-browser": "^16.2.10",
     "@angular/platform-browser-dynamic": "^16.2.10",
     "@angular/router": "^16.2.10",
@@ -59,7 +60,7 @@
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "~5.1.0",
+    "karma-jasmine": "~4.0.2",
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-spec-reporter": "^0.0.36",
     "karma-super-dots-reporter": "^0.2.0",
