--- a/package.json
+++ b/package.json
@@ -27,47 +27,48 @@
     ]
   },
   "dependencies": {
-    "@angular/animations": "^16.0.1",
-    "@angular/cdk": "^16.0.1",
-    "@angular/common": "^16.0.1",
-    "@angular/compiler": "^16.0.1",
-    "@angular/core": "^16.0.1",
-    "@angular/forms": "^16.0.1",
-    "@angular/material": "^16.0.1",
-    "@angular/platform-browser": "^16.0.1",
-    "@angular/platform-browser-dynamic": "^16.0.1",
-    "@angular/router": "^16.0.1",
-    "chart.js": "^3.7.1",
-    "chartjs-adapter-date-fns": "^2.0.0",
-    "date-fns": "^2.28.0",
+    "@angular/animations": "^16.2.10",
+    "@angular/cdk": "^16.2.9",
+    "@angular/common": "^16.2.10",
+    "@angular/compiler": "^16.2.10",
+    "@angular/core": "^16.2.10",
+    "@angular/forms": "^16.2.10",
+    "@angular/material": "^16.2.9",
+    "angular-material-expansion-panel": "^0.7.2",
+    "@angular/platform-browser": "^16.2.10",
+    "@angular/platform-browser-dynamic": "^16.2.10",
+    "@angular/router": "^16.2.10",
+    "chart.js": "^4.4.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^2.30.0",
     "moment": "^2.29.4",
     "ngx-spinner": "^16.0.2",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.1",
-    "@angular/cli": "^16.0.1",
-    "@angular/compiler-cli": "^16.0.1",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "husky": "^7.0.4",
-    "jasmine-core": "~4.0.0",
-    "json-server": "^0.17.3",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
+    "@angular-devkit/build-angular": "^16.2.7",
+    "@angular/cli": "^16.2.7",
+    "@angular/compiler-cli": "^16.2.10",
+    "@types/jasmine": "~5.1.1",
+    "@types/node": "^20.8.7",
+    "husky": "^8.0.3",
+    "jasmine-core": "~5.1.1",
+    "json-server": "^0.17.4",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "karma-spec-reporter": "^0.0.33",
+    "karma-jasmine": "~4.0.2",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "karma-spec-reporter": "^0.0.36",
     "karma-super-dots-reporter": "^0.2.0",
-    "lint-staged": "^12.3.7",
+    "lint-staged": "^15.0.2",
     "ng-bullet": "^1.0.3",
-    "ng-mocks": "^14.10.1",
-    "prettier": "^2.6.1",
-    "puppeteer": "^13.5.1",
-    "typescript": "~4.9.5"
+    "ng-mocks": "^14.11.0",
+    "prettier": "^3.0.3",
+    "puppeteer": "^21.3.8",
+    "typescript": "5.1.6"
   }
 }
