--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/d3-flextree": "^2.1.4",
     "@types/d3-hierarchy": "^3.1.6",
     "@types/d3-selection": "^3.0.10",
+    "@types/d3-shape": "^3.1.6",
     "@types/d3-transition": "^3.0.8",
     "@types/d3-zoom": "^3.0.8",
     "angular-material-expansion-panel": "^0.7.2",
