[YUNIKORN-2480] Convert yunikorn-web to use pnpm

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yunikorn-web",
   "version": "0.0.0",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
