--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser": "^16.2.10",
     "@angular/platform-browser-dynamic": "^16.2.10",
     "@angular/router": "^16.2.10",
+    "@fontsource/roboto": "^5.0.12",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@types/d3-flextree": "^2.1.4",
     "@types/d3-hierarchy": "^3.1.6",
@@ -54,7 +55,6 @@
     "d3-transition": "^3.0.1",
     "d3-zoom": "^3.0.0",
     "date-fns": "^2.30.0",
-    "fontsource-roboto": "^4.0.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.4",
     "ngx-spinner": "^16.0.2",
