--- a/package.json
+++ b/package.json
@@ -84,5 +84,10 @@
     "prettier": "^3.0.3",
     "puppeteer": "^22.2.0",
     "typescript": "5.1.6"
-  }
+  },
+  "engines": {
+    "node": "18.18",
+    "pnpm": "9.5.0"
+  },
+  "packageManager": "pnpm@9.5.0"
 }
