[YUNIKORN-2606] Modular sidebar with remote components
Implemented Module Federation for the Applications Drawer component
Implemented and fixed all tests.
Added copyright info

--- a/src/assets/config/envconfig.json
+++ b/src/assets/config/envconfig.json
@@ -1,3 +1,5 @@
 {
-  "localSchedulerWebAddress": "http://localhost:9889"
+  "localSchedulerWebAddress": "http://localhost:9889",
+  "moduleFederationRemoteEntry": "",
+  "allocationsDrawerRemoteComponent": ""
 }
