--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:prod": "ng build --configuration production",
     "start:srv": "json-server --watch json-db.json",
     "test:coverage": "ng test --code-coverage --karma-config=./karma.conf.ci.js",
-    "prettify": "prettier --config ./.prettierrc --write 'src/**/*.{js,ts,json,css,scss,md,html}'"
+    "prettify": "prettier --config ./.prettierrc --write 'src/**/*.{js,ts,json,css,scss,md,html}'",
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
   },
   "private": true,
   "husky": {
@@ -28,6 +29,7 @@
     ]
   },
   "dependencies": {
+    "@angular-architects/module-federation": "^16.0.4",
     "@angular/animations": "^16.2.10",
     "@angular/cdk": "^16.2.9",
     "@angular/common": "^16.2.10",
@@ -81,6 +83,7 @@
     "karma-super-dots-reporter": "^0.2.0",
     "lint-staged": "^15.0.2",
     "ng-mocks": "^14.11.0",
+    "ngx-build-plus": "^16.0.0",
     "prettier": "^3.0.3",
     "puppeteer": "^22.2.0",
     "typescript": "5.1.6"
