[YUNIKORN-2861] Angular upgrade to v17

--- a/angular.json
+++ b/angular.json
@@ -90,7 +90,7 @@
               "extraWebpackConfig": "webpack.prod.config.js"
             },
             "development": {
-              "browserTarget": "yunikorn-web:build:development"
+              "buildTarget": "yunikorn-web:build:development"
             }
           },
           "defaultConfiguration": "development",
