[YUNIKORN-2949] Implemented Module Federated ScheduledService

--- a/src/assets/config/envconfig.json
+++ b/src/assets/config/envconfig.json
@@ -1,5 +1,6 @@
 {
   "localSchedulerWebAddress": "http://localhost:9889",
   "moduleFederationRemoteEntry": "",
-  "allocationsDrawerRemoteComponent": ""
+  "allocationsDrawerRemoteComponent": "",
+  "schedulerServiceRemote": ""
 }
