--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "angular-material-expansion-panel": "^0.7.2",
     "chart.js": "^4.4.4",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "color": "^4.2.3",
     "d3-flextree": "^2.1.2",
     "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
@@ -66,6 +67,7 @@
     "@angular-devkit/build-angular": "^18.2.6",
     "@angular/cli": "^18.2.6",
     "@angular/compiler-cli": "^18.2.6",
+    "@types/color": "^4.2.0",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^20.16.9",
     "husky": "^8.0.3",
