do not stay in watch mode after test

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --watch=false",
     "watch": "ng build --watch --configuration development",
     "test:singleRun": "ng test --code-coverage --watch false",
     "start:host": "ng serve --host 0.0.0.0",
     "build:prod": "ng build --configuration production",
     "start:srv": "json-server --watch json-db.json",
-    "test:coverage": "ng test --code-coverage --karma-config=./karma.conf.ci.js",
+    "test:coverage": "ng test --code-coverage --karma-config=./karma.conf.ci.js --watch=false",
     "prettify": "prettier --config ./.prettierrc --write 'src/**/*.{js,ts,json,css,scss,md,html}'"
   },
   "private": true,
