[YUNIKORN-3197] upgrade to pnpm 10.x for web build
Upgrade engine requirements to pnpm 10.x as 9.x is ending support life.
Update the node version to the latest security release (20.20)
Remove hard coded pnpm version from the Dockerfile and pass the version
in from the Makefile.

As a precaution changed the color dependency based on MAL-2025-46985
advisory.

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "angular-material-expansion-panel": "^0.7.2",
     "chart.js": "^4.5.1",
     "chartjs-adapter-date-fns": "^3.0.0",
-    "color": "^4.2.3",
+    "color": "^5.0.3",
     "d3-flextree": "^2.1.2",
     "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
@@ -88,8 +88,8 @@
     "typescript": "5.8.3"
   },
   "engines": {
-    "node": "20",
-    "pnpm": "9"
+    "node": ">=20.20.0",
+    "pnpm": "10.x"
   },
-  "packageManager": "pnpm@9"
+  "packageManager": "pnpm@10.28.0"
 }
