[YUNIKORN-3214] Deploy browser content to root output dir
After upgrading to Angular 20, the default output directory has a
"browser" prefix prepended. Remove this to ensure content matches
previously generated app.

--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
           "builder": "@angular/build:application",
           "options": {
             "outputPath": {
-              "base": "dist/yunikorn-web"
+              "base": "dist/yunikorn-web",
+              "browser": ""
             },
             "index": "src/index.html",
             "polyfills": [
